--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.1.4",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
